--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,248 +6,234 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: trojan
-    server: 167.68.11.221
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k6us3.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/us3
-      headers:
-        host: k6us3.djjc.sbs
-  - &id002
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: trojan
-    server: 209.46.30.206
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k9us1.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/us1
-      headers:
-        host: k9us1.djjc.sbs
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: trojan
-    server: 209.46.30.106
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: nl4.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/nl1
-      headers:
-        host: nl4.djjc.sbs
-  - &id004
-    name: 🇩🇪_DE_德国->🇫🇷_FR_法国
+    name: 🇨🇭_CH_瑞士
     type: vmess
-    server: yx.zhke.cf
-    port: 443
+    server: 94.131.99.8
+    port: 47182
     cipher: auto
-    uuid: 3b89f882-0c3f-4144-811d-91fce7ab3c05
+    uuid: 81b2b630-8b6a-404f-b996-b12f13db5786
     alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /D26xvdqUdCpvvPTz4R
-      headers:
-        host: h196-fr.kxnn.eu.org
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10838
-    udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id006
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
+  - &id002
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
+    type: vless
+    server: 104.17.88.212
     port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
+    uuid: 376b9861-2fc6-4647-959c-18185cd9c95a
     tls: true
+    servername: lmn37.sbs
+    network: ws
+    ws-opts:
+      path: /fflsws
+  - &id003
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 89.116.161.133
+    port: 443
+    udp: true
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: p1us1.pqjc.buzz
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: linkvws
+      path: /pq/us1
+      headers:
+        host: p1us1.pqjc.buzz
+  - &id004
+    name: 🇨🇦_CA_加拿大_1
+    type: vless
+    server: 23.227.38.23
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id005
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 35.87.209.22
+    port: 13489
+    cipher: auto
+    uuid: 61761e55-dff5-4f94-f75f-b0a4718bba98
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id006
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vless
+    server: 104.19.212.163
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
   - &id007
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
     type: trojan
     server: xibaozi.19890604.day
-    port: 10845
+    port: 10848
     udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
+    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
     sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
   - &id008
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 94.131.117.159
-    port: 80
-    cipher: auto
-    uuid: 72b3b89a-30c5-4dc7-8b6e-f61218b95eda
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id009
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 94.131.13.110
-    port: 80
-    cipher: auto
-    uuid: d3e40d59-b53c-4f4e-8867-bb598be864d2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: lt1-vmess.sshmax.xyz
-  - &id010
-    name: 🇪🇸_ES_西班牙
-    type: trojan
-    server: 65.20.102.54
+    name: 🇨🇦_CA_加拿大_2
+    type: vless
+    server: 23.227.39.23
     port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id009
+    name: 🇹🇷_TR_土耳其
+    type: vless
+    server: 195.16.74.40
+    port: 443
+    uuid: a9673307-d520-4150-85f5-2f858372c120
+    tls: false
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10847
     udp: true
-    password: 842b5f9dd11e458d8613c907c4cc5723
-    sni: www.gpt123.one
+    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
   - &id011
-    name: 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大
-    type: trojan
-    server: 188.42.145.11
+    name: 🇨🇦_CA_加拿大_3
+    type: vless
+    server: 23.227.38.24
     port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k2us2.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/us2
-      headers:
-        host: k2us2.djjc.sbs
-  - &id012
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 142.171.237.214
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
     tls: true
-    skip-cert-verify: true
+    servername: xray1.freegradely.xyz
     network: ws
     ws-opts:
-      path: /path/221312281009
-      headers:
-        host: www.23168499.xyz
-  - &id013
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10837
-    udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_3
+      path: /bodhws
+  - &id012
+    name: 🇳🇱_NL_荷兰
     type: vmess
-    server: 162.159.135.221
+    server: 91.242.229.77
     port: 80
     cipher: auto
-    uuid: fa828efe-ff0a-4afd-a4cb-245cf65432ee
+    uuid: 56890326-df58-432d-be1e-67064e2b4355
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /?ed=2048
-      headers:
-        host: us.baipiao.fixddns.store
-  - &id015
-    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10846
-    udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+      path: /vmess
+  - &id013
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id014
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vless
+    server: 162.159.3.4
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id015
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+    type: vless
+    server: 198.41.216.16
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
   - &id016
-    name: 🇰🇷_KR_韩国
+    name: 🇩🇪_DE_德国_1
     type: trojan
-    server: 103.214.68.57
-    port: 10003
+    server: 5.104.108.109
+    port: 443
     udp: true
-    password: 6x8HcghsjS
-    sni: yes998.chickenkiller.com
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 20-24-33-134.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
   - &id017
-    name: 🇱🇺_LU_卢森堡->🇹🇷_TR_土耳其
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+      headers:
+        host: p6us4.pqjc.buzz
+  - &id019
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+    type: vless
+    server: 104.20.18.93
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id020
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 202.78.162.6
+    server: 95.164.46.154
     port: 80
     cipher: auto
-    uuid: 66fef53b-1b57-466d-89a4-bd99b90f6473
+    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@forwardv2ray
-      headers:
-        host: irisoft.servecounterstrike.com
-  - &id018
-    name: 🇷🇺_RU_俄罗斯联邦->🇩🇪_DE_德国
-    type: trojan
-    server: 185.176.24.105
-    port: 443
-    udp: true
-    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
-    sni: k9de1.djjc.sbs
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /djjc/de1
-      headers:
-        host: k9de1.djjc.sbs
-  - &id019
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10850
-    udp: true
-    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇺🇸_US_美国_4
+      path: /vmess
+  - &id021
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 95.164.46.154
     port: 8080
@@ -259,6 +245,138 @@ proxies:
     network: ws
     ws-opts:
       path: /vmess
+  - &id022
+    name: 🇨🇦_CA_加拿大_4
+    type: vless
+    server: 23.227.39.24
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id023
+    name: 🇺🇸_US_美国_6
+    type: vless
+    server: 104.21.4.4
+    port: 8443
+    uuid: 6feba7de-09e1-4031-9d40-074a764839c7
+    tls: true
+    servername: ssl.v2vpnchannel.website
+    network: ws
+    ws-opts:
+      path: /vless
+  - &id024
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: service.ouluyun9803.com
+    port: 21003
+    password: cfa17a0d-5e7d-4871-976e-f116e0818123
+    cipher: chacha20-ietf-poly1305
+  - &id025
+    name: 🇺🇸_US_美国_7
+    type: trojan
+    server: 167.68.5.183
+    port: 443
+    udp: true
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 6us3.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us3
+      headers:
+        host: 6us3.pqjc.buzz
+  - &id026
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+    type: vless
+    server: 198.41.216.129
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id027
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
+    type: vless
+    server: 198.41.216.9
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id028
+    name: 🇨🇦_CA_加拿大_5
+    type: vless
+    server: 23.227.39.86
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id029
+    name: 🇨🇦_CA_加拿大_6
+    type: vless
+    server: 23.227.38.22
+    port: 443
+    uuid: ffb15cd2-0521-49de-b8aa-fb15d58c8075
+    tls: true
+    servername: v2ray3.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bqbows
+  - &id030
+    name: 🇳🇱_NL_荷兰->🇮🇷_IR_伊朗
+    type: vless
+    server: 45.131.4.88
+    port: 443
+    uuid: 376b9861-2fc6-4647-959c-18185cd9c95a
+    tls: true
+    servername: lmn37.sbs
+    network: ws
+    ws-opts:
+      path: /fflsws
+  - &id031
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
+    type: vless
+    server: 172.67.79.156
+    port: 443
+    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
+    tls: true
+    servername: xray1.freegradely.xyz
+    network: ws
+    ws-opts:
+      path: /bodhws
+  - &id032
+    name: 🇺🇸_US_美国_8
+    type: trojan
+    server: 89.116.180.158
+    port: 443
+    udp: true
+    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
+    sni: 3us2.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us2
+      headers:
+        host: 3us2.pqjc.buzz
+  - &id033
+    name: 🇺🇸_US_美国_9
+    type: vless
+    server: 95.164.86.121
+    port: 80
+    uuid: 3e51e5cd-93d5-40d1-a2bb-30c4df14c718
+    tls: false
+    servername: 95.164.86.121
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -305,6 +423,19 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -330,6 +461,19 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
   - name: SELECT
     type: select
     proxies:
@@ -353,6 +497,19 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
