--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,69 +6,47 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇩🇪_DE_德国_1
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
     type: trojan
-    server: 5.104.108.120
-    port: 443
+    server: xibaozi.19890604.day
+    port: 10845
     udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 20-24-33-134.nhost.00cdn.com
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
   - &id002
-    name: 🇺🇸_US_美国_1
+    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
     type: trojan
-    server: 89.116.180.158
-    port: 443
+    server: xibaozi.19890604.day
+    port: 10846
     udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 3us2.pqjc.buzz
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us2
-      headers:
-        host: 3us2.pqjc.buzz
+    network: tcp
   - &id003
-    name: 🇺🇸_US_美国_2
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: trojan
-    server: 89.116.180.179
-    port: 443
+    server: xibaozi.19890604.day
+    port: 10838
     udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: p6us4.pqjc.buzz
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-      headers:
-        host: p6us4.pqjc.buzz
+    network: tcp
   - &id004
-    name: 🇩🇪_DE_德国_2
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: trojan
-    server: 5.104.108.109
-    port: 443
+    server: xibaozi.19890604.day
+    port: 10837
     udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 20-24-33-134.nhost.00cdn.com
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
   - &id005
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: 89.116.161.133
-    port: 443
-    udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: p1us1.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us1
-      headers:
-        host: p1us1.pqjc.buzz
-  - &id006
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: 35.87.209.22
     port: 13489
@@ -78,67 +56,30 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id007
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10848
-    udp: true
-    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10847
-    udp: true
-    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id009
+  - &id006
     name: 🇨🇳_CN_中国->🇮🇳_IN_印度
     type: ss
     server: service.ouluyun9803.com
     port: 21003
     password: cfa17a0d-5e7d-4871-976e-f116e0818123
     cipher: chacha20-ietf-poly1305
-  - &id010
-    name: 🇺🇸_US_美国_5
+  - &id007
+    name: 🇩🇪_DE_德国
     type: trojan
-    server: 167.68.5.183
+    server: 5.104.108.109
     port: 443
     udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 6us3.pqjc.buzz
+    password: 56e1f11c-1217-46ab-b127-6afbc23bafba
+    sni: 20-24-33-134.nhost.00cdn.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-      headers:
-        host: 6us3.pqjc.buzz
-  - &id011
-    name: 🇺🇸_US_美国_6
+    network: tcp
+  - &id008
+    name: 🇬🇮_GI_直布罗陀
     type: vmess
-    server: 95.164.46.154
-    port: 8080
-    cipher: auto
-    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id012
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 94.131.13.110
+    server: 95.164.8.106
     port: 80
     cipher: auto
-    uuid: d3e40d59-b53c-4f4e-8867-bb598be864d2
+    uuid: c1ebe8c7-bdd9-4aca-a2f7-01bea79279b3
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -146,29 +87,21 @@ proxies:
     ws-opts:
       path: /vmess
       headers:
-        host: lt1-vmess.sshmax.xyz
-  - &id013
-    name: 🇨🇭_CH_瑞士
+        host: ee2-vmess.sshmax.xyz
+  - &id009
+    name: 🇳🇱_NL_荷兰_1
     type: vmess
-    server: 94.131.99.8
-    port: 47182
+    server: 91.242.229.77
+    port: 80
     cipher: auto
-    uuid: 81b2b630-8b6a-404f-b996-b12f13db5786
+    uuid: 56890326-df58-432d-be1e-67064e2b4355
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇰🇷_KR_韩国
-    type: trojan
-    server: 103.214.68.57
-    port: 10003
-    udp: true
-    password: 6x8HcghsjS
-    sni: yes998.chickenkiller.com
-    skip-cert-verify: true
-    network: tcp
-  - &id015
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id010
     name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
     server: s1c.v2.v001sss.xyz
@@ -183,6 +116,176 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
+  - &id011
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 94.131.13.110
+    port: 80
+    cipher: auto
+    uuid: d3e40d59-b53c-4f4e-8867-bb598be864d2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: lt1-vmess.sshmax.xyz
+  - &id012
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 104.18.15.149
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tr3.889611.com
+  - &id013
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 162.159.200.6
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id014
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.144.2.113
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.apple.com
+  - &id015
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 104.18.15.150
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id016
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 162.159.200.7
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.visaapp.top
+  - &id017
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 162.159.200.5
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ca3.889611.com
+  - &id018
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: yhnsb3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yhnsb3.shabijichang.com
+  - &id019
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id020
+    name: 🇳🇱_NL_荷兰_2
+    type: vmess
+    server: 91.242.229.69
+    port: 2086
+    cipher: auto
+    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: nl1.xv2ray.net
+  - &id021
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: 103.214.68.57
+    port: 10003
+    udp: true
+    password: 6x8HcghsjS
+    sni: yes998.chickenkiller.com
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10850
+    udp: true
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -224,6 +327,13 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -244,6 +354,13 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
   - name: SELECT
     type: select
     proxies:
@@ -262,6 +379,13 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
