--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,54 +6,32 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇭_CH_瑞士
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
     type: vmess
-    server: 94.131.99.8
-    port: 47182
+    server: 162.159.200.7
+    port: 80
     cipher: auto
-    uuid: 81b2b630-8b6a-404f-b996-b12f13db5786
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
-    type: vless
-    server: 104.17.88.212
-    port: 443
-    uuid: 376b9861-2fc6-4647-959c-18185cd9c95a
-    tls: true
-    servername: lmn37.sbs
     network: ws
     ws-opts:
-      path: /fflsws
+      path: /
+      headers:
+        host: er3.visaapp.top
+  - &id002
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10838
+    udp: true
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
   - &id003
     name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 89.116.161.133
-    port: 443
-    udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: p1us1.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us1
-      headers:
-        host: p1us1.pqjc.buzz
-  - &id004
-    name: 🇨🇦_CA_加拿大_1
-    type: vless
-    server: 23.227.38.23
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id005
-    name: 🇺🇸_US_美国_2
     type: vmess
     server: 35.87.209.22
     port: 13489
@@ -63,69 +41,133 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id006
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vless
-    server: 104.19.212.163
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id007
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: trojan
     server: xibaozi.19890604.day
-    port: 10848
+    port: 10850
     udp: true
-    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
     sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
-  - &id008
-    name: 🇨🇦_CA_加拿大_2
-    type: vless
-    server: 23.227.39.23
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id009
-    name: 🇹🇷_TR_土耳其
-    type: vless
-    server: 195.16.74.40
-    port: 443
-    uuid: a9673307-d520-4150-85f5-2f858372c120
+  - &id005
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.144.2.113
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
     tls: false
-    network: tcp
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.apple.com
+  - &id006
+    name: 🇳🇱_NL_荷兰_1
+    type: vmess
+    server: 91.242.229.69
+    port: 2086
+    cipher: auto
+    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: nl1.xv2ray.net
+  - &id007
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 104.18.15.150
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id008
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 173.245.58.51
+    port: 443
+    cipher: aes-128-gcm
+    uuid: 12d7e57b-9fc8-41e0-9b32-f503dce10c1c
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /fdczvws
+      headers:
+        host: godofwar2020.colocrossing.sbs
+  - &id009
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 162.159.200.3
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ca3.889611.com
   - &id010
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 104.18.15.149
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tr3.889611.com
+  - &id011
+    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
     type: trojan
     server: xibaozi.19890604.day
-    port: 10847
+    port: 10846
     udp: true
-    password: c71b7574-aeaa-40f0-989b-47f3fe7ac85a
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
     sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
-  - &id011
-    name: 🇨🇦_CA_加拿大_3
-    type: vless
-    server: 23.227.38.24
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
+  - &id012
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 162.159.200.6
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /bodhws
-  - &id012
-    name: 🇳🇱_NL_荷兰
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id013
+    name: 🇳🇱_NL_荷兰_2
     type: vmess
     server: 91.242.229.77
     port: 80
@@ -137,13 +179,33 @@ proxies:
     network: ws
     ws-opts:
       path: /vmess
-  - &id013
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+  - &id014
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10845
+    udp: true
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10837
+    udp: true
+    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
     type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
+    server: 162.159.200.5
+    port: 80
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -151,232 +213,7 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: s1c.v2.v001sss.xyz
-  - &id014
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vless
-    server: 162.159.3.4
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id015
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-    type: vless
-    server: 198.41.216.16
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id016
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 5.104.108.109
-    port: 443
-    udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 5.104.108.120
-    port: 443
-    udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-      headers:
-        host: p6us4.pqjc.buzz
-  - &id019
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-    type: vless
-    server: 104.20.18.93
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id020
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 95.164.46.154
-    port: 80
-    cipher: auto
-    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id021
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 95.164.46.154
-    port: 8080
-    cipher: auto
-    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id022
-    name: 🇨🇦_CA_加拿大_4
-    type: vless
-    server: 23.227.39.24
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id023
-    name: 🇺🇸_US_美国_6
-    type: vless
-    server: 104.21.4.4
-    port: 8443
-    uuid: 6feba7de-09e1-4031-9d40-074a764839c7
-    tls: true
-    servername: ssl.v2vpnchannel.website
-    network: ws
-    ws-opts:
-      path: /vless
-  - &id024
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: ss
-    server: service.ouluyun9803.com
-    port: 21003
-    password: cfa17a0d-5e7d-4871-976e-f116e0818123
-    cipher: chacha20-ietf-poly1305
-  - &id025
-    name: 🇺🇸_US_美国_7
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-      headers:
-        host: 6us3.pqjc.buzz
-  - &id026
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-    type: vless
-    server: 198.41.216.129
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id027
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-    type: vless
-    server: 198.41.216.9
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id028
-    name: 🇨🇦_CA_加拿大_5
-    type: vless
-    server: 23.227.39.86
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id029
-    name: 🇨🇦_CA_加拿大_6
-    type: vless
-    server: 23.227.38.22
-    port: 443
-    uuid: ffb15cd2-0521-49de-b8aa-fb15d58c8075
-    tls: true
-    servername: v2ray3.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bqbows
-  - &id030
-    name: 🇳🇱_NL_荷兰->🇮🇷_IR_伊朗
-    type: vless
-    server: 45.131.4.88
-    port: 443
-    uuid: 376b9861-2fc6-4647-959c-18185cd9c95a
-    tls: true
-    servername: lmn37.sbs
-    network: ws
-    ws-opts:
-      path: /fflsws
-  - &id031
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-    type: vless
-    server: 172.67.79.156
-    port: 443
-    uuid: 0773256c-d020-436d-afea-6eee7cb6c872
-    tls: true
-    servername: xray1.freegradely.xyz
-    network: ws
-    ws-opts:
-      path: /bodhws
-  - &id032
-    name: 🇺🇸_US_美国_8
-    type: trojan
-    server: 89.116.180.158
-    port: 443
-    udp: true
-    password: f34ec9d8-3ae0-46ba-94e7-a03eaf2af651
-    sni: 3us2.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us2
-      headers:
-        host: 3us2.pqjc.buzz
-  - &id033
-    name: 🇺🇸_US_美国_9
-    type: vless
-    server: 95.164.86.121
-    port: 80
-    uuid: 3e51e5cd-93d5-40d1-a2bb-30c4df14c718
-    tls: false
-    servername: 95.164.86.121
-    network: tcp
+        host: ca3.889611.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -419,23 +256,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -457,23 +277,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
   - name: SELECT
     type: select
     proxies:
@@ -493,23 +296,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
